# fastapi-helm-chart

./: README.md
charts/: fastapi-helm-chart-0.0.2.tgz  fastapi-helm-chart-0.0.3.tgz  fastapi-helm-chart-0.0.4.tgz  fastapi-helm-chart-0.0.5.tgz  index.yaml
charts/fastapi/: Chart.yaml  fastapi-helm-chart-0.0.1.tgz  index.yaml  values.yaml
charts/fastapi/templates/: _helpers.tpl  configmap.yaml  deployment.yaml  route.yaml  service.yaml
example/: .gitignore  README.md
example/app/: Dockerfile  docker-compose.yml  pyproject.toml
example/app/api/: main.py
