[tool.poetry]
name = "fastapi-example"
version = "0.0.1"
description = "FastAPI Example App for Helm Chart usage"
authors = ["Abdullah Alqahtani <anqorithm@protonmail.com>"]
license = "MIT"
package-mode = false

[tool.poetry.dependencies]
python = "^3.13"
fastapi = "^0.110.0"
uvicorn = "^0.27.1"
pydantic = "^2.6.3"
pydantic-settings = "^2.2.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api" 